reset.cfg: Disable Electrician

--- a/reset.cfg
+++ b/reset.cfg
@@ -4,6 +4,7 @@ sv_timelimit 5
 inf_first_infected_limit 3
 
 inf_enable_engineer 1
+inf_enable_electrician 0
 inf_enable_soldier 1
 inf_enable_scientist 1
 inf_enable_biologist 1
